--- a/src/style/SlideGalleryV2.scss
+++ b/src/style/SlideGalleryV2.scss
@@ -18,7 +18,7 @@
                 width: calc(100%);
                 max-height: 600px;
                 object-fit: contain;
-               
+                pointer-events: none;
             }
         }
         button{
