Nueva version del Slide

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,10 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+} 
+
+.App{
+    width: 200px;
 }
 .container{
     max-width: 500px;
